--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "countdown",
 	"displayName": "countDown",
-	"description": "倒计时",
+	"description": "倒计时提醒",
 	"publisher": "zeng",
 	"version": "0.0.1",
 	"engines": {
@@ -17,27 +17,27 @@
 	"contributes": {
 		"configuration": [
 			{
-				"title": "提醒小工具",
+				"title": "倒计时小助手",
 				"properties": {
 					"countDown.defalutTime": {
 						"type": "string",
 						"default": "18:00",
-						"description": "默认的常用时间。"
+						"description": "默认的常用时间，24时间制，默认为18:00。"
 					},
 					"countDown.specialTime": {
 						"type": "string",
-						"default": "9:31",
+						"default": "无",
 						"description": "特殊的时间，配合specialDay使用，格式与defalutTime一致。"
 					},
 					"countDown.specialDay": {
 						"type": "string",
-						"default": "[1,2,4]",
-						"description": "星期几。格式类型：[number]"
+						"default": "[]",
+						"description": "星期几。格式类型：[number]。列如周一，周三，周四：[1,3,4]"
 					},
 					"countDown.activeTitle": {
 						"type": "string",
 						"default": "下班",
-						"description": "达成目标的标题"
+						"description": "目标的标题"
 					}
 				}
 			}
